fix min-height issue on ios safari browser

--- a/css/main.css
+++ b/css/main.css
@@ -324,7 +324,7 @@ lottie-player {
         width: 97vw;
         height: 80vh;
         border-radius: 15px;
-        min-height: 100vh;
+        min-height: 80vh;
         min-height: -webkit-fill-available;
     }
 
